add home header

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "pizza-hut-app",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/pizza-logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
